Motion path is not correct for <g> SVG elements with transform-box:fill-box
Categories
(Core :: CSS Transitions and Animations, defect, P3)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox73 | --- | fixed |
People
(Reporter: boris, Assigned: boris)
References
(Blocks 1 open bug, )
Details
Attachments
(2 files)
It seems nsFrame::GetPosition() doesn't work as I expected for <g> SVG element in this case. I thought it will return the values of cx and cy in app units, so perhaps we have to use nsLayoutUtils::ComputeGeometryBox(aFrame, StyleGeometryBox::FillBox) to get the correct position of the svg element.
| Assignee | ||
Updated•6 years ago
|
| Assignee | ||
Updated•6 years ago
|
| Assignee | ||
Updated•6 years ago
|
| Assignee | ||
Comment 1•6 years ago
|
||
When we apply the transformation on the <g> element, its transformation also
performs on its child elements. So Motion-path should also work well in this
case.
For offset-path:path(), we have to make sure the element is on the svg path, no
matter what is its x and y values. That's why we have to calculate the
the frame position of the transformed SVG element if transform-box is fill-box.
However, for <g> element, its nsIFrame::GetPosition() is (0, 0), so we have to
calculate the geometry bbox instead, to make sure it works well on <g> or other
svg transformed elements.
Updated•6 years ago
|
Updated•6 years ago
|
Comment 5•6 years ago
|
||
| bugherder | ||
Description
•