Bug 1601486 - Use bbox for calculating the alignment for motion path transformation on eSVGContainer elements (e.g. <g>). r=longsonr

When we apply the transformation on the <g> element, its transformation also
performs on its child elements. So Motion-path should also work well in this
case.

For offset-path:path(), we have to make sure the element is on the svg path, no
matter what is its x and y values. That's why we have to calculate the
the frame position of the transformed SVG element if transform-box is fill-box.
However, for <g> element, its nsIFrame::GetPosition() is (0, 0), so we have to
calculate the geometry bbox instead, to make sure it works well on <g> or other
svg transformed elements.

Differential Revision: https://phabricator.services.mozilla.com/D55888

--HG--
extra : moz-landing-system : lando